--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/QA.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/QA.css
@@ -253,3 +253,27 @@
 .modal-post-question, modal-reply-question {
     margin-top:70px;
 }
+
+.btn-rep {
+    width: 100px;
+    background-color: white;
+    height: 25px;
+    border: 1px solid rgba(0,0,0,.1);
+    color: rgba(0,0,0,.4);
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    border-radius:50px;
+}
+
+.row-reply {
+    height:20px;
+    position:relative;
+}
+.btn-dislike {
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+}
