--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -155,7 +155,7 @@
                                 </span>
                             </a>
                             <ul class="treeview-menu tree-view-menu-custom">
-                                <li><a href="@Url.Action("Index","Home", new { id = eventId})"><i class="fa fa-home" aria-hidden="true"></i> <span>Trang chủ</span></a></li>
+                                <li><a href="@Url.Action("Index","Home", new { id = eventId})"><i class="fa fa-home" aria-hidden="true"></i> <span>Thông tin sự kiện</span></a></li>
                                 <li><a href="@Url.Action("Index","Session" , new { id = eventId})"><i class="fa fa-calendar" aria-hidden="true"></i><span>Phiên làm việc</span></a></li>
                                 <li><a href="@Url.Action("Index","QA", new { id = eventId})"><i class="fa fa-question-circle"></i> <span>Hỏi đáp</span></a></li>
                                 <li><a href="@Url.Action("Index","Voting", new { id = eventId})"><i class="fa fa-check-circle-o"></i> <span>Bình chọn</span></a></li>
