--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/File/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/File/Index.cshtml
@@ -260,33 +260,33 @@
                      $('#thumbnail-container').attr('style', 'padding-top: 12px;');
 
                      if (['pdf'].indexOf(mimetype) !== -1) {
-                         $('#thumbnail-container').html("<i class='fa fa-file-pdf-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                         $('#thumbnail-container').html("<i class='fa fa-file-pdf-o fa-2x' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
                          if (['docx', 'doc'].indexOf(mimetype) !== -1) {
-                         $('#thumbnail-container').html("<i class='fa fa-file-word-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                             $('#thumbnail-container').html("<i class='fa fa-file-word-o fa-2x' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
                              if (['xlsx', 'xls'].indexOf(mimetype) !== -1) {
-                         $('#thumbnail-container').html("<i class='fa fa-file-excel-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                                 $('#thumbnail-container').html("<i class='fa fa-file-excel-o fa-2x' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
                                  if (['avi', 'flv', 'wmv', 'mov', 'mp4'].indexOf(mimetype) !== -1) {
-                         $('#thumbnail-container').html("<i class='fa fa-file-video-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                                     $('#thumbnail-container').html("<i class='fa fa-file-video-o fa-2x' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
                                      if (['mp3', 'flac', 'wma', 'wav', 'midi', 'ogg', 'ac3', 'amr', 'aac', 'm4a'].indexOf(mimetype) !== -1) {
-                         $('#thumbnail-container').html("<i class='fa fa-file-audio-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                                         $('#thumbnail-container').html("<i class='fa fa-file-audio-o fa-2x' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
                                          if (['zip', 'rar', '7z'].indexOf(mimetype) !== -1) {
-                         $('#thumbnail-container').html("<i class='fa fa-file-archive-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                                             $('#thumbnail-container').html("<i class='fa fa-file-archive-o fa-2x' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
                                              if (['txt', 'rtf'].indexOf(mimetype) !== -1) {
-                         $('#thumbnail-container').html("<i class='fa fa-file-text-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                                                 $('#thumbnail-container').html("<i class='fa fa-file-text-o fa-2x' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
                                                  if (['ppt', 'pps', 'pptx', 'ppsx'].indexOf(mimetype) !== -1) {
-                         $('#thumbnail-container').html("<i class='fa fa-file-powerpoint-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                                                     $('#thumbnail-container').html("<i class='fa fa-file-powerpoint-o fa-2x' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else
                                                      if (['jpeg', 'png'].indexOf(mimetype) !== -1) {
-                         $('#thumbnail-container').html("<i class='fa fa-file-image-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                                                         $('#thumbnail-container').html("<i class='fa fa-file-image-o fa-2x' style='padding-right: 10px;'></i>" + fileData.filename);
                      } else {
-                         $('#thumbnail-container').html("<i class='fa fa-file-o' style='padding-right: 10px;'></i>" + fileData.filename);
+                                                         $('#thumbnail-container').html("<i class='fa fa-file-o fa-2x' style='padding-right: 10px;'></i>" + fileData.filename);
                      }
 
                  }
