--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
@@ -115,8 +115,8 @@
             $('.speaker-title').val(name);
             $('.speaker-description').val(description);
             $('.speaker-img').val(image);
-            $('#thumbnail-container').html("<img id='thumbnail' src='" + image + "' style='width:200px;padding-top: 10px;'/>");
             $('.speaker-id').val(id);
+            $('#thumbnail-container').html("<img id='thumbnail' src='" + image + "' style='width:200px;padding-top: 15px;'/>");
             $('.modal-title').text('Chỉnh sửa diễn giả');
             $('.speaker-button').text('Lưu');
             $('.speaker-button').attr('id', 'btn-save');
@@ -228,13 +228,8 @@
                      const container = document.getElementById('thumbnail-container');
                      const thumbnail = document.getElementById('thumbnail') || new Image();
                      thumbnail.id = 'thumbnail';
-                     thumbnail.style = 'padding-top: 10px;';
-                     thumbnail.src = client.transform(fileData.handle, {
-                         resize: {
-                             width: 200
-                         }
-                     });
-
+                     thumbnail.style = 'padding-top: 15px;width:200px;';
+                     thumbnail.src = client.transform(fileData.handle);
                      if (!container.contains(thumbnail)) {
                          container.appendChild(thumbnail);
                      }
