--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Sponsor/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Sponsor/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="row">
                 <h2 class="col-sm-10">Quản Lý Nhà Tài Trợ</h2>
                 <div class="col-sm-2">
-                    <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#sponsorModal" style="margin-top:20px">
+                    <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#sponsorModal" style="margin-top:20px" onclick="clearModal()">
                         <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
                     </button>
                 </div>
@@ -117,7 +117,7 @@
             $('.sponsor-description').val(description);
             $('.sponsor-img').val(image);
             $('.sponsor-id').val(id);
-            $('#thumbnail-container').html("<img id='thumbnail' src='" + image + "' style='width:200px;padding-top: 10px;'/>");
+            $('#thumbnail-container').html("<img id='thumbnail' src='" + image + "' style='width:200px;padding-top: 15px;'/>");
             $('.modal-title').text('Chỉnh sửa nhà tài trợ');
             $('.sponsor-button').text('Lưu');
             $('.sponsor-button').attr('id', 'btn-save');
@@ -229,13 +229,8 @@
                     const container = document.getElementById('thumbnail-container');
                     const thumbnail = document.getElementById('thumbnail') || new Image();
                     thumbnail.id = 'thumbnail';
-                    thumbnail.style = 'padding-top: 10px;';
-                    thumbnail.src = client.transform(fileData.handle, {
-                        resize: {
-                            width: 200
-                        }
-                    });
-
+                    thumbnail.style = 'padding-top: 15px;width:200px;';
+                    thumbnail.src = client.transform(fileData.handle);
                     if (!container.contains(thumbnail)) {
                         container.appendChild(thumbnail);
                     }
